--- a/src/holo-ssh-keys.toml
+++ b/src/holo-ssh-keys.toml
@@ -5,3 +5,5 @@ release      = 1
 description  = "Holo plugin for provisioning SSH public keys to $HOME/.ssh/authorized_keys"
 author       = "Stefan Majewsky <holo-packaging@posteo.de>"
 architecture = "x86_64"
+
+requires    = ["holo >= 1.2", "holo < 2.0", "openssh-client"]
