--- a/src/holo-run-scripts.toml
+++ b/src/holo-run-scripts.toml
@@ -4,3 +4,5 @@ version     = "1.3"
 release     = 1
 description = "Holo plugin for running custom provisioning scripts"
 author      = "Stefan Majewsky <holo-packaging@posteo.de>"
+
+requires    = ["holo >= 1.2", "holo < 2.0"]
