--- a/src/holo-users-groups.toml
+++ b/src/holo-users-groups.toml
@@ -5,3 +5,5 @@ release      = 1
 description  = "Holo plugin for provisioning user accounts and groups"
 author       = "Stefan Majewsky <holo-packaging@posteo.de>"
 architecture = "x86_64"
+
+requires    = ["holo >= 1.2", "holo < 2.0", "passwd"]
