--- a/src/holo.toml
+++ b/src/holo.toml
@@ -1,10 +1,11 @@
 [package]
 name         = "holo"
-version      = "1.2.1"
-release      = 2
+version      = "2.0"
+release      = 1
 description  = "Minimalistic configuration management"
 author       = "Stefan Majewsky <holo-packaging@posteo.de>"
 architecture = "x86_64"
 
-requires     = ["git"]
-provides     = ["holo-files"]
+requires     = ["git", "openssh", "shadow"]
+provides     = ["holo-files", "holo-run-scripts", "holo-ssh-keys", "holo-users-groups"]
+replaces     = [              "holo-run-scripts", "holo-ssh-keys", "holo-users-groups"]
